Fixing issue where replacing files in the file manager would update the UI incorrectly, it would add a duplicate row instead of replacing a row
Also fixed timestamp issue on replaced files, tweaked CSS for "Edit File" and "Edit Image" buttons, they were a bit off center, and removed a line of unused JS from file manager after_upload callback

--- a/themes/cp_themes/default/css/file_browser.css
+++ b/themes/cp_themes/default/css/file_browser.css
@@ -209,7 +209,7 @@ a.file_browser_thumbnail.last_row {
 #file_uploader.file_exists .file_exists,
 #file_uploader.after_upload .after_upload,
 #file_uploader.edit_modal .edit_modal {
-	display: inline;
+	display: inline-block;
 }
 
 #file_uploader .cancel:link,
